# fstream

./: Cargo.toml  README.md
src/: abc.rs  and.rs  filter.rs  fs.rs  fstream.rs  main.rs  main.rs.todo  mode.rs  or.rs  parse.rs  print.rs  registry.rs  walk.rs  walkdir.rs-x
src/fstream/: common.rs  recv.rs  send.rs  syncext.rs
