[package]
name = "fstream"
version = "0.1.0"
authors = ["Roger Peppe <rogpeppe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
tokio = { version = "1", features = ["full"] }
anyhow = "*"
walkdir = "*"
snafu = "*"
async-recursion = "*"
logos = "*"
